# ADIOS2

docs/user_guide/source/engines/: plugin.rst
examples/: CMakeLists.txt
examples/plugins/engine/: CMakeLists.txt  ExampleEnginePlugin.cpp  ExampleReadPlugin.cpp  ExampleReadPlugin.h  ExampleWritePlugin.cpp  ExampleWritePlugin.h  examplePluginEngine_class.cpp  examplePluginEngine_read.cpp  examplePluginEngine_write.cpp
source/adios2/: CMakeLists.txt
source/adios2/core/: ADIOS.cpp  ADIOS.h  IO.cpp
source/adios2/engine/plugin/: PluginEngine.cpp  PluginEngine.h  PluginEngine.inl  PluginEngineInterface.cpp  PluginEngineInterface.h
source/adios2/operator/plugin/: PluginOperator.cpp  PluginOperator.h  PluginOperator.inl  PluginOperatorInterface.cpp  PluginOperatorInterface.h
source/adios2/toolkit/plugin/: PluginManager.cpp  PluginManager.h
testing/install/: CMakeLists.txt
testing/install/plugin/: CMakeLists.txt  ExampleReadPlugin.cpp
